# JARVIS

./: .env.example  .gitignore  README.md  api_backoff.py  config.py  discord_bot.py  llm.py  requirements.txt
projects/operation-jarvis/: .gitignore  README.md  jarvis-cli  jarvis.py  pyproject.toml  requirements.txt  research.md
projects/operation-jarvis/air-purifier/: .env.example  .gitignore  README.md  purifier-cli  pyproject.toml
projects/operation-jarvis/air-purifier/air_purifier/: __init__.py  cli.py  config.py  vesync_client.py
projects/operation-jarvis/dashboard/: .gitignore  README.md  package-lock.json  package.json
projects/operation-jarvis/dashboard/docs/: performance-reliability-audit-2026-05-18.md  troubleshooting.md
projects/operation-jarvis/dashboard/public/: dashboard-voice.js  display.js  index.html  manifest.webmanifest  styles.css  sw.js
projects/operation-jarvis/dashboard/scripts/: install-launch-agent.sh  lan-url.mjs  uninstall-launch-agent.sh
projects/operation-jarvis/dashboard/src/: server.mjs
projects/operation-jarvis/raspberry-pi/: README.md
projects/operation-jarvis/raspberry-pi/docs/: audio-hardware.md  display-hdmi-console.md  upgrade-log-20260517.md
projects/operation-jarvis/raspberry-pi/room_audio/: README.md  pi_room_audio_client.py  room_audio_server.py
projects/operation-jarvis/raspberry-pi/scripts/: check-pi.sh  install-room-audio-service.sh  print-terminal.sh  restore-visible-console.sh  test-anker-powerconf.sh
projects/operation-jarvis/scripts/: connect_chromecast.py  spotify_oauth_setup.py  tv.py
projects/operation-jarvis/smart-plug/: .env.example  README.md  pyproject.toml  requirements.txt
projects/operation-jarvis/smart-plug/smart_plug/: __init__.py  (+3 more)
projects/operation-jarvis/voice/: .env.example  APPEND_SYSTEM.md  README.md  config.py  discord_voice.py  discord_voice_bot.py  requirements.txt
(+70 files in other folders)
