[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "operation-jarvis"
version = "0.1.0"
description = "Unified Discord voice + dashboard phone camera + Google Cast + smart-plug real-world JARVIS project"
requires-python = ">=3.9"
dependencies = [
  "PyChromecast==13.1.0",
  "yt-dlp",
  "urllib3<2",
  "audioop-lts==0.2.2",
  "davey==0.1.5",
  "discord.py==2.7.1",
  "discord-ext-voice-recv==0.5.2a179",
  "PyNaCl==1.5.0",
  "requests==2.33.1",
  "huggingface_hub==1.14.0",
  "piper-tts==1.4.2",
  "openwakeword==0.5.1",
  "onnxruntime>=1.16.0,<2",
]

[project.scripts]
operation-jarvis = "jarvis:main"

[tool.setuptools]
py-modules = ["jarvis"]
include-package-data = false
